tests/baselines/reference/accessorWithoutBody2(strict=true).errors.txt
accessorWithoutBody2.ts(1,15): error TS7032: Property 'foo' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
accessorWithoutBody2.ts(1,19): error TS7006: Parameter 'a' implicitly has an 'any' type.
accessorWithoutBody2.ts(1,20): error TS1005: '{' expected.


==== accessorWithoutBody2.ts (3 errors) ====
    var v = { set foo(a) }
                  ~~~
!!! error TS7032: Property 'foo' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                      ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                       ~
!!! error TS1005: '{' expected.